# final-project-s26-t1

./: .gitignore  .gitmodules  README.md  final-project-s26-t1.mc3  flake.nix  index.html  main.c  main_imu.c  main_pit.c  main_usb.c  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  usb_config.h  usb_descriptors.c
.github/workflows/: jekyll-gh-pages.yml  main.yml  release.yml
assets/: left_ptr.cur  wifi.FCStd
enclosure/: bottom.stl  etchV4.SLDPRT  knob.stl  top.stl
etch/: Cargo.toml  default.nix  out.txt
etch/src/: main.rs
lib/: LCD_GFX.c  LCD_GFX.h  i2c_driver.c  i2c_driver.h  lsm6dso_driver.c  lsm6dso_driver.h  main_mcc_uart.c  usb_driver.c  usb_driver.h
mcc_generated_files/system/: ccp.h  clock.h  config_bits.h  interrupt.h  pins.h  port.h  protected_io.h  syscfg.h  system.h
mcc_generated_files/system/src/: clock.c  config_bits.c  interrupt.c  pins.c  protected_io.S  syscfg.c  system.c
mcc_generated_files/system/utils/: assembler.h  atomic.h  compiler.h  interrupt_avr8.h  utils.h  utils_assert.h
mcc_generated_files/system/utils/assembler/: gas.h  iar.h
mcc_generated_files/uart/: uart_drv_interface.h  uart_types.h  usart1.h
mcc_generated_files/uart/src/: usart1.c
mcc_generated_files/usb/: usb0.h  usb_descriptors.h  usb_device.c  usb_device.h
mcc_generated_files/usb/src/: usb0.c
mcc_generated_files/vref/: vref.h
mcc_generated_files/vref/src/: vref.c
rpi-install/: README.md  configuration.nix  desktop.nix  rpi4.nix
site/: .gitignore  _config.yml
site/_posts/: 2026-03-30-welcome-to-jekyll.markdown
wiring/: .gitignore  2026-05-03_00-26-42.kicad_sym  CustomSymbols.bak  CustomSymbols.kicad_sym  sym-lib-table  wiring.kicad_prl  wiring.kicad_pro  wiring.kicad_sch
