[package]
name = "etch"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["wgpu"] }

[patch.crates-io]
# include fix for https://github.com/gfx-rs/wgpu/issues/9293
eframe = { git = "https://github.com/emilk/egui.git", rev = "4016dee2bdbfeaecfed529edb6a155088f775119" }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "c9c7359f5b52f751077e583513efef7cd2c19806" }
